--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,31 +19,39 @@ jobs:
           echo "✅ Tailscale IP Address:"
           tailscale ip -4
 
-      - name: Create SSH User
+      - name: Create SSH User and Start SSH Server
         run: |
           # အသုံးပြုသူအသစ်ဖန်တီး
           sudo useradd -m ubuntu
-          echo 'ubuntu:Pass1234!' | sudo chpasswd
+          
+          # Password သတ်မှတ်
+          echo 'ubuntu:Pass1234' | sudo chpasswd
           
           # sudo အသုံးပြုခွင့်ပေး
           sudo usermod -aG sudo ubuntu
 
-          # SSH server install
-          sudo apt-get update -y
-          sudo apt-get install -y openssh-server
+          # SSH server install လုပ်ပြီးသားဖြစ်မဖြစ်စစ်ဆေးပြီး မရှိမှ install လုပ်ပါမည်
+          if ! dpkg -s openssh-server >/dev/null 2>&1; then
+            sudo apt-get update -y
+            sudo apt-get install -y openssh-server
+          fi
 
-          # SSH service enable
+          # Password ဖြင့် SSH Login ခွင့်ပြုရန် config ကိုပြင်ဆင်
+          sudo sed -i 's/^PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
+          
+          # SSH service enable and restart
           sudo systemctl enable ssh
           sudo systemctl restart ssh
 
           echo "✅ SSH User: ubuntu"
-          echo "✅ SSH Password: Pass1234!"
+          echo "✅ SSH Password: Pass1234"
           echo "============================"
+          echo "✅ Tailscale IP Address:"
           tailscale ip -4
 
       - name: Keep Runner Alive
         run: |
-          echo "Server is running... Keep window open."
+          echo "Server is running... Keep this window open."
           while true; do
             echo "[$(date)] Ubuntu server still active..."
             sleep 300
