--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,19 +25,45 @@ jobs:
           sudo useradd -m ubuntu
           
           # Password သတ်မှတ်
+          echo 'ubuntu:Pass1234' | sudo name: Ubuntu SSH Server
+
+on:
+  workflow_dispatch:
+
+jobs:
+  ubuntu-ssh:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3600
+
+    steps:
+      - name: Install Tailscale
+        run: |
+          curl -fsSL https://tailscale.com/install.sh | sh
+          sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-ubuntu-${{ github.run_id }}
+
+      - name: Show Tailscale IP
+        run: |
+          echo "✅ Tailscale IP Address:"
+          tailscale ip -4
+
+      - name: Create SSH User and Start SSH Server
+        run: |
+          # အသုံးပြုသူအသစ်ဖန်တီး
+          sudo useradd -m ubuntu
+          
+          # Password သတ်မှတ်
           echo 'ubuntu:Pass1234' | sudo chpasswd
           
           # sudo အသုံးပြုခွင့်ပေး
           sudo usermod -aG sudo ubuntu
 
-          # SSH server install လုပ်ပြီးသားဖြစ်မဖြစ်စစ်ဆေးပြီး မရှိမှ install လုပ်ပါမည်
-          if ! dpkg -s openssh-server >/dev/null 2>&1; then
-            sudo apt-get update -y
-            sudo apt-get install -y openssh-server
-          fi
+          # SSH server install လုပ်ပါ
+          sudo apt-get update -y
+          sudo apt-get install -y openssh-server
 
+          # >>> အရေးကြီးဆုံး ပြင်ဆင်ချက် <<<
           # Password ဖြင့် SSH Login ခွင့်ပြုရန် config ကိုပြင်ဆင်
-          sudo sed -i 's/^PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
+          sudo sed -i 's/^#?PasswordAuthentication .*/PasswordAuthentication yes/' /etc/ssh/sshd_config
           
           # SSH service enable and restart
           sudo systemctl enable ssh
